syntax = "proto3";

import "cloud/dataplatform/api/connman/common.proto";

option go_package = "a.yandex-team.ru/cloud/dataplatform/api/connman";

package yandex.cloud.priv.connman.v1;

message ClickHouseAuth {
    oneof security {
        UserPasswordAuth user_password = 1;
    }
}

message ClickHouseCluster {
    message Shard {
        string name = 1;
        repeated string hosts = 2;
    }

    repeated Shard shards = 5;
    // depends on tls params may vary as http or https
    int64 http_port = 2;
    int64 tcp_port = 3;
    TLSParams tls_params = 4;

    reserved 1; // use "shards" instead of "hosts"
}
message ClickHouseConnection {
    oneof connection {
        ClickHouseCluster on_premise = 1;
        string managed_cluster_id = 2;
    }
    ClickHouseAuth auth = 3;
}
